Get rid of landing page, Update RSVP page if you're having errors, try to fix layout issue with last_name and zip for IE (use float:left and clearboth div)

--- a/env/WeddingWebsite/weddingwebsite/static/style/main.css
+++ b/env/WeddingWebsite/weddingwebsite/static/style/main.css
@@ -550,6 +550,7 @@ hr {
   font-size: 14px;
   padding-left: 2px;
   margin-bottom: 8px;
+  float: left;
 }
 
 .find_rsvp_label {
